Fix asset paths

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Invest </title>
-    <link rel="stylesheet" href="/public/fonts.css">
+    <link rel="stylesheet" href="public/fonts.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
 <section id="how__itword">
@@ -40,23 +40,23 @@
     <div class="invest__carousel-wrap">
         <div class="carousel invest__carousel">
             <div class="invest__card" data-plan="purple">
-                <img src="/public/images/purple.png" alt="Purple">
+                <img src="public/images/purple.png" alt="Purple">
             </div>
 
             <div class="invest__card" data-plan="gold">
-                <img src="/public/images/gold.png" alt="Gold">
+                <img src="public/images/gold.png" alt="Gold">
             </div>
 
             <div class="invest__card" data-plan="platinum">
-                <img src="/public/images/platinum.png" alt="Platinum">
+                <img src="public/images/platinum.png" alt="Platinum">
             </div>
 
             <div class="invest__card" data-plan="green">
-                <img src="/public/images/green.png" alt="Green">
+                <img src="public/images/green.png" alt="Green">
             </div>
 
             <div class="invest__card" data-plan="silver">
-                <img src="/public/images/silver.png" alt="Silver">
+                <img src="public/images/silver.png" alt="Silver">
             </div>
 
 
@@ -273,48 +273,48 @@
                 </div>
                 <div class="project__second-item">
                     <div class="project__second-previev">
-                        <img src="/public/images/project/ifw_project_1.png" alt="ifw_project_1_preview"
+                        <img src="public/images/project/ifw_project_1.png" alt="ifw_project_1_preview"
                              class="project-static-img">
                         <div class="swiper project-slider" style="display: none;">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project/ifw_project_1.png" data-fancybox="gallery">
-                                        <img src="/public/images/project/ifw_project_1.png"/>
+                                    <a href="public/images/project/ifw_project_1.png" data-fancybox="gallery">
+                                        <img src="public/images/project/ifw_project_1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_1/2.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_1/2.png"/>
+                                    <a href="public/images/project_slider_1/2.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_1/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_1/3.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_1/3.png"/>
+                                    <a href="public/images/project_slider_1/3.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_1/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_1/4.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_1/4.png"/>
+                                    <a href="public/images/project_slider_1/4.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_1/4.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project/ifw_project_1.png" data-fancybox="gallery">
-                                        <img src="/public/images/project/ifw_project_1.png"/>
+                                    <a href="public/images/project/ifw_project_1.png" data-fancybox="gallery">
+                                        <img src="public/images/project/ifw_project_1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_1/2.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_1/2.png"/>
+                                    <a href="public/images/project_slider_1/2.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_1/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_1/3.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_1/3.png"/>
+                                    <a href="public/images/project_slider_1/3.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_1/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_1/4.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_1/4.png"/>
+                                    <a href="public/images/project_slider_1/4.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_1/4.png"/>
                                     </a>
                                 </div>
                             </div>
@@ -351,48 +351,48 @@
                 </div>
                 <div class="project__second-item">
                     <div class="project__second-previev">
-                        <img src="/public/images/project/project_ifw_2.png" alt="ifw_project_2_preview"
+                        <img src="public/images/project/project_ifw_2.png" alt="ifw_project_2_preview"
                              class="project-static-img">
                         <div class="swiper project-slider" style="display: none;">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_2/1.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_2/1.png"/>
+                                    <a href="public/images/project_slider_2/1.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_2/1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_2/2.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_2/2.png"/>
+                                    <a href="public/images/project_slider_2/2.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_2/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_2/3.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_2/3.png"/>
+                                    <a href="public/images/project_slider_2/3.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_2/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_2/4.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_2/4.png"/>
+                                    <a href="public/images/project_slider_2/4.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_2/4.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_2/1.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_2/1.png"/>
+                                    <a href="public/images/project_slider_2/1.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_2/1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_2/2.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_2/2.png"/>
+                                    <a href="public/images/project_slider_2/2.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_2/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_2/3.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_2/3.png"/>
+                                    <a href="public/images/project_slider_2/3.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_2/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="/public/images/project_slider_2/4.png" data-fancybox="gallery">
-                                        <img src="/public/images/project_slider_2/4.png"/>
+                                    <a href="public/images/project_slider_2/4.png" data-fancybox="gallery">
+                                        <img src="public/images/project_slider_2/4.png"/>
                                     </a>
                                 </div>
                             </div>
