Add call_manager click

--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
                             <img src="public/images/project/project_ifw_2.2.png" alt="ifw_project_2_schedule">>
                         </div>
                     </div>
+                    <a href="#" id="call_manager_second" class="btn hidden">Зв’язатись з менеджером</a>
                 </div>
             </div>
         </div>
