--- a/index.html
+++ b/index.html
@@ -278,42 +278,42 @@
                         <div class="swiper project-slider" style="display: none;">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="public/images/project/ifw_project_1.png" data-fancybox="gallery">
+                                    <a href="public/images/project/ifw_project_1.png" data-fancybox="project1">
                                         <img src="public/images/project/ifw_project_1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_1/2.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_1/2.png" data-fancybox="project1">
                                         <img src="public/images/project_slider_1/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_1/3.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_1/3.png" data-fancybox="project1">
                                         <img src="public/images/project_slider_1/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_1/4.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_1/4.png" data-fancybox="project1">
                                         <img src="public/images/project_slider_1/4.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project/ifw_project_1.png" data-fancybox="gallery">
+                                    <a href="public/images/project/ifw_project_1.png">
                                         <img src="public/images/project/ifw_project_1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_1/2.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_1/2.png">
                                         <img src="public/images/project_slider_1/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_1/3.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_1/3.png">
                                         <img src="public/images/project_slider_1/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_1/4.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_1/4.png">
                                         <img src="public/images/project_slider_1/4.png"/>
                                     </a>
                                 </div>
@@ -356,42 +356,42 @@
                         <div class="swiper project-slider" style="display: none;">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/1.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_2/1.png" data-fancybox="project2">
                                         <img src="public/images/project_slider_2/1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/2.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_2/2.png" data-fancybox="project2">
                                         <img src="public/images/project_slider_2/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/3.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_2/3.png" data-fancybox="project2">
                                         <img src="public/images/project_slider_2/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/4.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_2/4.png" data-fancybox="project2">
                                         <img src="public/images/project_slider_2/4.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/1.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_2/1.png">
                                         <img src="public/images/project_slider_2/1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/2.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_2/2.png">
                                         <img src="public/images/project_slider_2/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/3.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_2/3.png">
                                         <img src="public/images/project_slider_2/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/4.png" data-fancybox="gallery">
+                                    <a href="public/images/project_slider_2/4.png">
                                         <img src="public/images/project_slider_2/4.png"/>
                                     </a>
                                 </div>
