Scroll to form in bottom after click button "Стати партнером"

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="invest__details-cta">
-                    <a class="invest__details-btn btn" href="#partner">Стати партнером</a>
+                    <a class="invest__details-btn btn" href="#">Стати партнером</a>
                 </div>
             </div>
 
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="invest__details-cta">
-                    <a class="invest__details-btn btn" href="#partner">Стати партнером</a>
+                    <a class="invest__details-btn btn" href="#">Стати партнером</a>
                 </div>
 
 
@@ -181,7 +181,7 @@
                     </p>
                 </div>
                 <div class="invest__details-cta">
-                    <a class="invest__details-btn btn" href="#partner">Стати партнером</a>
+                    <a class="invest__details-btn btn" href="#">Стати партнером</a>
                 </div>
             </div>
 
@@ -215,7 +215,7 @@
                     </p>
                 </div>
                 <div class="invest__details-cta">
-                    <a class="invest__details-btn btn" href="#partner">Стати партнером</a>
+                    <a class="invest__details-btn btn" href="#">Стати партнером</a>
                 </div>
             </div>
             <div class="plan" data-plan="silver">
@@ -237,7 +237,7 @@
                     </p>
                 </div>
                 <div class="invest__details-cta">
-                    <a class="invest__details-btn btn" href="#partner">Стати партнером</a>
+                    <a class="invest__details-btn btn" href="#">Стати партнером</a>
                 </div>
             </div>
         </div>
