--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                             сертифікатів вже активовано<br><br>Кількість сертифікатів обмежена.
                         </div>
                         <div>
-                            <img src="public/images/project/ifw_project_1.1.png" alt="ifw_project_1_schedule">>
+                            <img src="public/images/project/ifw_project_1.1.png" alt="ifw_project_1_schedule">
                         </div>
                     </div>
                     <a href="#" id="call_manager" class="btn hidden">Зв’язатись з менеджером</a>
@@ -404,7 +404,7 @@
                             сертифікатів вже активовано<br><br>Кількість сертифікатів обмежена.
                         </div>
                         <div>
-                            <img src="public/images/project/project_ifw_2.2.png" alt="ifw_project_2_schedule">>
+                            <img src="public/images/project/project_ifw_2.2.png" alt="ifw_project_2_schedule">
                         </div>
                     </div>
                     <a href="#" id="call_manager_second" class="btn hidden">Зв’язатись з менеджером</a>
