Останні фікси (fancybox, click to card, fonts)

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 <img src="public/images/platinum.png" alt="Platinum">
             </div>
 
+            <div class="invest__card" data-plan="black">
+                <img src="public/images/black.png" alt="Black">
+            </div>
+
             <div class="invest__card" data-plan="green">
                 <img src="public/images/green.png" alt="Green">
             </div>
@@ -142,6 +146,49 @@
             </div>
 
             <div class="plan" data-plan="platinum">
+                <div class="invest__details-title">Status <span class="accent">“Platinum”</span> від 100.000</div>
+
+                <div class="invest__details-text">
+                    <p>1. Персоналізований цифровий та фізичний сертифікат інвестора<br>
+                        Іменний документ, що підтверджує ваш статус та участь у проектах <span class="accent">IFW</span>.
+                    </p>
+                    <p>2. Унікальний інвесторський номер з доступом до реферальної системи
+                        На ваш вибір:</p>
+                    — 9% фіксованої винагороди від першого внеску інвестора, залученого за вашим промокодом або — 6% від
+                    усіх інвестицій залученого клієнта за вашим промокодом та подальших від Вашої лінії інвестицій «
+                    Після залучення Вами інвестора всі подальші інвестиції як цього інвестора, так і осіб, залучених
+                    ним, фіксуються з Вашим бонусом» .
+                    <p>• Доступ до бонусної системи з накопиченням <span class="accent">IFW</span>-балів за кожного
+                        залученого інвестора вам нараховуються <span class="accent">IFW</span>-бали від суми залучених
+                        інвестицій.<br>
+                        • Накопичені бали можна обміняти на реальні кошти.
+                        <br>
+                        • Еквівалент балів до обсягу інвестицій ви можете уточнити у нашого менеджера.<br>
+                        • Чим більша сума залучених інвестицій — тим більше балів ви отримуєте, а
+                        відповідно зростає і ваш дохід.<br>
+                        • Унікальний набір інвестора <span class="accent">Platinum</span><br>
+                        • Особиста знижка в закладах харчування проекту<br>
+                        • Закритий чат інвесторів з актуальною інформацією та етапами проектів<br>
+                        • Приоритет на відвідування закритих презентацій, зустрічей та відкриття закладів,
+                        дегустацій.<br>
+                        • Індивідуальний менеджер<br>
+                        • Можливість першим дізнаватись нові проекти та можливості для інвестицій<br>
+                        • Кращі умови зі знижками для друзів інвестора Platinum<br>
+                        • Закритий відпочинок інвесторів від <span class="accent">IFW</span><br>
+                        • Можливість купити більше сертифікатів в одні руки "індивідуально обговорюється<br>
+                    </p>
+
+
+                    <p class="invest__details-note">
+                        <span class="accent">Розподіл часток</span> відбувається після повного закриття інвестиційного
+                        збору та згідно суми вашої інвестиції.
+                    </p>
+                </div>
+                <div class="invest__details-cta">
+                    <a class="invest__details-btn btn" href="#">Стати партнером</a>
+                </div>
+            </div>
+            <div class="plan" data-plan="black">
                 <div class="invest__details-title">Status <span class="accent">“Platinum”</span> від 100.000</div>
 
                 <div class="invest__details-text">
@@ -278,22 +325,22 @@
                         <div class="swiper project-slider" style="display: none;">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="public/images/project/ifw_project_1.png" data-fancybox="project1">
+                                    <a href="public/images/project_slider_1/fancybox_1.1.png" data-fancybox="project1">
                                         <img src="public/images/project/ifw_project_1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_1/2.png" data-fancybox="project1">
+                                    <a href="public/images/project_slider_1/fancybox_1.2.png" data-fancybox="project1">
                                         <img src="public/images/project_slider_1/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_1/3.png" data-fancybox="project1">
+                                    <a href="public/images/project_slider_1/fancybox_1.3.png" data-fancybox="project1">
                                         <img src="public/images/project_slider_1/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_1/4.png" data-fancybox="project1">
+                                    <a href="public/images/project_slider_1/fancybox_1.4.png" data-fancybox="project1">
                                         <img src="public/images/project_slider_1/4.png"/>
                                     </a>
                                 </div>
@@ -356,43 +403,28 @@
                         <div class="swiper project-slider" style="display: none;">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/1.png" data-fancybox="project2">
+                                    <a href="public/images/project_slider_2/fancybox_2.1.png" data-fancybox="project2">
                                         <img src="public/images/project_slider_2/1.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/2.png" data-fancybox="project2">
+                                    <a href="public/images/project_slider_2/fancybox_2.2.png" data-fancybox="project2">
                                         <img src="public/images/project_slider_2/2.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/3.png" data-fancybox="project2">
+                                    <a href="public/images/project_slider_2/fancybox_2.3.png" data-fancybox="project2">
                                         <img src="public/images/project_slider_2/3.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/4.png" data-fancybox="project2">
+                                    <a href="public/images/project_slider_2/fancybox_2.4.png" data-fancybox="project2">
                                         <img src="public/images/project_slider_2/4.png"/>
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/1.png">
-                                        <img src="public/images/project_slider_2/1.png"/>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/2.png">
-                                        <img src="public/images/project_slider_2/2.png"/>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/3.png">
-                                        <img src="public/images/project_slider_2/3.png"/>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="public/images/project_slider_2/4.png">
-                                        <img src="public/images/project_slider_2/4.png"/>
+                                    <a href="public/images/project_slider_2/fancybox_2.5.png" data-fancybox="project2">
+                                        <img src="public/images/project_slider_2/5.png"/>
                                     </a>
                                 </div>
                             </div>
